fix scrolling issue on mobile

--- a/app/assets/stylesheets/Inbox.scss
+++ b/app/assets/stylesheets/Inbox.scss
@@ -1,7 +1,7 @@
 @import '_colors.scss';
 
 .Inbox {
-  margin-top: 76px;
+  padding-top: 76px;
 
   .conversation-details-wrapper {
     background-color: $snow;
